--- a/client/front_desk.jade
+++ b/client/front_desk.jade
@@ -4,12 +4,12 @@ template(name='frontdesk')
             i.briefcase.icon
             |Staff
             // i#add_impounded_bike.green.plus.link.icon 
-        +requests
+        //- +requests
         +schedule
         .ui.header Notices
-        .ui.centerd.cards
-            each bikes
-                +bike
+        //- .ui.centerd.cards
+        //-     each bikes
+        //-         +bike
 
 
 
