--- a/client/healthclub.jade
+++ b/client/healthclub.jade
@@ -1,6 +1,6 @@
 template(name='goldrun')
-    img.ui.fluid.image.checkin_banner(src="{{c.url 'grfront' width=1000 height=500 crop='crop'}}")
-    .ui.padded.grid.checkin_page
+    //- img.ui.fluid.image.checkin_banner(src="{{c.url 'grfront' width=1000 height=500 crop='crop'}}")
+    .ui.padded.stackable.grid
         .sixteen.wide.column
             //- h1.ui.center.aligned.header 
             //-     |Gold Run Health Club
