--- a/components/delta/delta.jade
+++ b/components/delta/delta.jade
@@ -2,19 +2,19 @@ template(name='delta')
     with current_model
         .ui.stackable.padded.grid
             .row
-                .eight.wide.right.aligned.scrolling.column
-                    .ui.right.aligned.inline.inverted.header
+                .six.wide.scrolling.column
+                    .ui.right.aligned.inline.header
                         i.icon(class=icon)
                         | #{title}
                     unless is_loading
                         if is_admin
-                            .ui.icon.circular.big.black.button.add_model_doc(title="Add #{title}")
+                            .ui.icon.circular.big.button.add_model_doc(title="Add #{title}")
                                 i.green.plus.icon
                         //- if can_edit
                             //- +edit_button
-                        if is_admin
-                            .ui.icon.black.circular.button.edit_model
-                                i.cog.icon
+                        .ui.icon.circular.button.edit_model
+                            i.cog.icon
+                        //- if is_admin
                                 //- | Configure #{plural}
                         // .ui.divider
                         // // each sessions
@@ -23,11 +23,11 @@ template(name='delta')
                                 
                         if current_delta
                             if is_dev
-                                .ui.icon.black.circular.button.print_delta(title='Print Session Doc')
+                                .ui.icon.circular.button.print_delta(title='Print Session Doc')
                                     i.code.icon
-                            .ui.reset.icon.black.circular.button(title='Reload Session')
+                            .ui.reset.icon.circular.button(title='Reload Session')
                                 i.refresh.icon
-                            .ui.delete_delta.icon.black.circular.button(title='Delete Session')
+                            .ui.delete_delta.icon.circular.button(title='Delete Session')
                                 i.trash.icon
                         else
                             .create_delta.ui.button.pointer(title='new session')
@@ -35,9 +35,9 @@ template(name='delta')
                                 |Session
                     // |did: #{session_delta_id}
                             
-                    each current_delta.facets
+                    each sorted_facets
                         +facet
-                .eight.wide.column.scrolling
+                .ten.wide.column.scrolling
                     each current_delta.result_ids
                         +delta_result
                 
@@ -47,7 +47,7 @@ template(name='facet')
     if filtering_res
         //- .ui.accordion
         //-     .active.title
-        .ui.inverted.header 
+        .ui.header 
             if icon
                 i.icon(class=icon)
             if title
@@ -56,12 +56,12 @@ template(name='facet')
                 |#{key}
             //- i.dropdown.icon
             //- .active.content
-        .ui.icon.small.inverted.transparent.input
-            i.inverted.search.icon
-            input.add_filter(type='text')
+        //- .ui.icon.small.transparent.input
+        //-     i.search.icon
+        //-     input.add_filter(type='text')
         each filtering_res
             if name
-                .selector.ui.circular.big.compact.button.toggle_selection(class=toggle_value_class title=count)
+                .selector.ui.circular.large.compact.button.toggle_selection(class=toggle_value_class title=count)
                     strong #{name}
                     //- small #{cal_count} #{count}
             else
@@ -104,10 +104,10 @@ template(name='delta_result')
                             |edit model
                 else
                     if is_admin
-                        a.ui.circular.big.icon.black.button(href="/m/#{current_model.slug}/#{_id}/edit" title='edit')
+                        a.ui.circular.big.icon.button(href="/m/#{current_model.slug}/#{_id}/edit" title='edit')
                             i.pencil.icon
                             //- |edit
-                    a.ui.circular.icon.big.black.button(href="/m/#{current_model.slug}/#{_id}/view" title='view')
+                    a.ui.circular.icon.big.button(href="/m/#{current_model.slug}/#{_id}/view" title='view')
                         i.eye.icon
                         //- |view
                 each model.actions
