--- a/client/client.jade
+++ b/client/client.jade
@@ -1,5 +1,5 @@
 head
-    title dao
+    title Gold Run
     meta(name='viewport', content='user-scalable=no, initial-scale=1.0, maximum-scale=1.0, width=device-width')
     meta(name='apple-mobile-web-app-capable', content='yes')
     meta(name='apple-mobile-web-app-status-bar-style', content='black')
@@ -21,12 +21,10 @@ head
 
 template(name='layout')
     //- img.ui.fluid.image.banner_image(src="{{c.url 'stars_big' width=1000 height=500 crop='crop'}}")
-    img.ui.fluid.image(src="{{c.url 'stars_big' width=2000}}")
-    .ui.stackable.grid.profile_grid
-        .row
-            .sixteen.wide.center.aligned.column
-                +nav
-            //- .ui.center.aligned.basic.segment
+    //- img.ui.fluid.image(src="{{c.url 'stars_big' width=2000}}")
+    if currentUser
+        +nav
+    .ui.stackable.padded.grid
         .row
             .sixteen.wide.column
                 #main
