--- a/client/fields.jade
+++ b/client/fields.jade
@@ -28,7 +28,7 @@ template(name='color_view')
             |#{field_value}
 
 template(name='color_icon_edit')
-    .ui.small.inline.inverted.header
+    .ui.small.inline.header
         if icon
             i.grey.icon(class=icon)
         if title
@@ -43,7 +43,7 @@ template(name='color_icon_edit')
 
 template(name='icon_edit')
     .ui.icon.input
-        .ui.small.inline.inverted.header
+        .ui.small.inline.header
             if icon
                 i.grey.icon(class=icon)
             if title
@@ -90,7 +90,7 @@ template(name='link_edit')
 
 
 template(name='link_view')
-    .ui.small.inverted.header 
+    .ui.small.header 
         if icon
             i.grey.icon(class=icon)
         |#{title}
@@ -112,7 +112,7 @@ template(name='image_view')
 
 template(name='image_edit')
     .ui.form
-        .ui.inline.small.inverted.header
+        .ui.inline.small.header
             if icon
                 i.grey.icon(class=icon)
             if title
@@ -243,7 +243,7 @@ template(name='document_view')
         
 template(name='text_edit')
     .ui.fluid.icon.input
-        .ui.small.inverted.inline.header
+        .ui.small.inline.header
             if icon
                 i.grey.icon(class=icon)
             if title
@@ -283,7 +283,7 @@ template(name='text_view')
 
 template(name='parent_edit')
     .ui.fluid.icon.input
-        .ui.small.inverted.inline.header
+        .ui.small.inline.header
             |Parent Edit
             if icon
                 i.grey.icon(class=icon)
@@ -320,7 +320,7 @@ template(name='phone_edit')
     .ui.fluid.input
         // if icon
         //     i.grey.icon(class=icon)
-        .ui.inline.inverted.header 
+        .ui.inline.header 
             if title
                 |#{title}
             else if label
@@ -353,7 +353,7 @@ template(name='phone_view')
 template(name='number_edit')
     div
     .ui.fluid.input
-        .ui.small.inline.inverted.header
+        .ui.small.inline.header
             if icon
                 i.grey.icon(class=icon)
             if title
@@ -382,7 +382,7 @@ template(name='number_view')
 
 template(name='date_edit')
     .ui.fluid.input
-        .ui.small.inline.inverted.header
+        .ui.small.inline.header
             if title
                 |#{title}
             else if label
@@ -413,7 +413,7 @@ template(name='date_view')
 
 template(name='time_edit')
     .ui.fluid.input
-        .ui.small.inline.inverted.header
+        .ui.small.inline.header
             if title
                 |#{title}
             else
@@ -458,7 +458,7 @@ template(name='datetime_view')
 
 template(name='array_edit')
     .ui.fluid.input
-        .ui.small.inline.inverted.header
+        .ui.small.inline.header
             if icon
                 i.grey.icon(class=icon)
             if title
@@ -495,7 +495,7 @@ template(name='array_view')
 
 template(name='children_edit')
     div
-    .ui.inverted.inline.header 
+    .ui.inline.header 
         |#{title}
     .ui.circular.icon.large.button.add_child(title="Add Child #{ref_model}")
         i.plus.icon
@@ -608,7 +608,7 @@ template(name='signature_edit')
             i.remove.icon
 
 template(name='signature_view')
-    .ui.small.inverted.header
+    .ui.small.header
         if icon
             i.grey.icon(class=icon)
         | #{title}    
@@ -624,7 +624,7 @@ template(name='signature_view')
 
 template(name='boolean_edit')
     //- div
-    .ui.small.inverted.inline.header
+    .ui.small.inline.header
         if icon
             i.grey.icon(class=icon)
         if title
@@ -650,7 +650,7 @@ template(name='boolean_edit')
 
 
 template(name='boolean_view')
-    .ui.small.inverted.header #{title}
+    .ui.small.inline.header #{title}
     if field_value
         .ui.green.label Yes
     else
@@ -669,7 +669,7 @@ template(name='single_doc_view')
 
 template(name='single_doc_edit')
     div
-    .ui.small.inline.inverted.header(title=key) 
+    .ui.small.inline.header(title=key) 
         if icon
             i.grey.icon(class=icon)
         |#{label}
@@ -683,7 +683,7 @@ template(name='single_doc_edit')
 
 template(name='multi_doc_edit')
     div
-    .ui.small.inline.inverted.header(title=key)
+    .ui.small.inline.header(title=key)
         if icon
             i.icon(class=icon)
         |#{title} #{label}
@@ -730,7 +730,7 @@ template(name='multi_doc_view')
 
 template(name='single_user_edit')
     div
-    .ui.small.inverted.inline.header 
+    .ui.small.inline.header 
         if icon
             i.icon(class=icon)
         |#{title}
@@ -767,7 +767,7 @@ template(name='single_user_edit')
 
 
 template(name='single_user_view')
-    .ui.small.inverted.header 
+    .ui.small.header 
         |#{title}
         //- #{key} #{label}
     with field_value
@@ -778,14 +778,14 @@ template(name='single_user_view')
 
 template(name='single_person_view')
     div
-    .ui.small.inverted.header #{title}
+    .ui.small.header #{title}
     if field_value
         +person_card field_value
     div
             
             
 template(name='single_person_edit')
-    .ui.small.inverted.header #{title}
+    .ui.small.header #{title}
     .ui.form
         if field_value
             +person_card field_value
@@ -827,7 +827,7 @@ template(name='single_person_edit')
 template(name='multi_user_edit')
     .ui.segment
         .ui.form
-            .ui.small.inverted.header
+            .ui.small.header
                 if icon
                     i.grey.icon(class=icon)
                 if title
