--- a/client/styles.css
+++ b/client/styles.css
@@ -4,7 +4,7 @@ body {
     font-size: 110% !important;
     /*line-height: 200% !important;*/
     /*background: #3d3d3d !important;*/
-    background: rgba(0, 0, 0, 1) !important
+    /* background: rgba(0, 0, 0, 1) !important */
     /* background: #0e0e44 !important; */
 }
 
