--- a/components/accounts/login.jade
+++ b/components/accounts/login.jade
@@ -4,7 +4,7 @@ template(name='login')
             .ten.wide.column
                 .ui.center.aligned.basic.segment
                     i.massive.icons
-                        i.home.grey.icon(class="{{#if is_logging_in}} loading {{/if}}")
+                        i.home.grey.icon
                         i.corner.right.chevron.icon
                 if message
                     h4.ui.center.aligned.header #{message}
@@ -24,11 +24,12 @@ template(name='login')
                         |login #{username}
                         i.right.chevron.icon
                 else
-                    .ui.center.aligned.basic.segment
-                        .ui.small.grey.header no '#{username}' user
-                        a.ui.circular.black.button(href='/register')
-                            i.user.plus.icon
-                            |register
+                    if username
+                        .ui.center.aligned.basic.segment
+                            .ui.small.grey.header no '#{username}' user
+                            a.ui.circular.black.button(href='/register')
+                                i.user.plus.icon
+                                |register
                 .ui.center.aligned.basic.segment    
                     a.ui.circular.large.grey.button(href='/forgot_password')
                         i.refresh.icon
