--- a/components/delta/model.jade
+++ b/components/delta/model.jade
@@ -25,7 +25,7 @@ template(name='model_edit')
                     //-     +Template.dynamic template=edit_template 
                     //-     // .ui.header #{key} [#{field}] #{label}
                     .ui.inline.header Fields
-                    .ui.icon.circular.button.add_field
+                    .ui.icon.circular.basic.large.button.add_field
                         i.plus.green.icon
                     each fields
                         .ui.smoothed.segment
