--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -134,10 +134,11 @@ template(name='role_editor')
         .ui.button #{this}
 
 template(name='author_info')
-    a.ui.circular.button(href="/user/#{_id}/view")
-        if image_id
-            img.ui.avatar.image(src="{{c.url image_id width=100 height=100 gravity='face' crop='fill'}}")
-         by #{author.profile.name}
+    with author
+        a.ui.circular.button(href="/user/#{username}")
+            if image_id
+                img.ui.avatar.image(src="{{c.url image_id width=100 height=100 gravity='face' crop='fill'}}")
+             by #{first_name} #{last_name}
 
 template(name='creation_info')
     .ui.small.grey.inline.header #{when}
@@ -170,7 +171,7 @@ template(name='view_button')
 
 
 template(name='remove_button')
-    a.ui.circular.button.remove(title='Delete')
+    a.ui.circular.basic.button.remove(title='Delete')
         i.remove.red.icon
         |Delete
 
