--- a/components/delta/model_doc.jade
+++ b/components/delta/model_doc.jade
@@ -2,16 +2,16 @@ template(name='model_doc_edit')
     with current_doc
         .ui.stackable.padded.grid
             .centered.row
-                .four.wide.column
+                .six.wide.column
                     .ui.header(title="model: #{model}")
                         |Edit #{model}
                     +creation_info
-                    a.ui.green.big.circular.icon.button(href="/m/#{current_model.slug}/#{_id}/view")
-                        i.big.checkmark.icon
+                    a.ui.big.circular.icon.button(href="/m/#{current_model.slug}/#{_id}/view")
+                        i.big.green.checkmark.icon
                     #delete_doc.ui.red.icon.circular.button
                         i.trash.icon
                             
-                .twelve.wide.column.scrolling
+                .ten.wide.column.scrolling
                     //- |#{model}
                     each fields
                         +Template.dynamic template=edit_template 
@@ -22,9 +22,9 @@ template(name='model_doc_view')
     with current_doc
         .ui.stackable.padded.grid
             .row
-                .four.wide.column
+                .six.wide.column
                     .ui.cloud.segment
-                        a.ui.circular.large.black.button(href="/m/#{current_model.slug}" title=current_model.plural)
+                        a.ui.circular.large.basic.button(href="/m/#{current_model.slug}" title=current_model.plural)
                             i.left.chevron.icon
                             i.icon(class=current_model.icon)
                             |#{current_model.title}
@@ -43,7 +43,7 @@ template(name='model_doc_view')
                         //         i.chevron.left.icon
                         //     |View #{model}
                         if is_admin
-                            a.ui.big.circular.icon.button(href="/m/#{model}/#{_id}/edit" title='Edit')
+                            a.ui.big.circular.basic.icon.button(href="/m/#{model}/#{_id}/edit" title='Edit')
                                 i.blue.pencil.icon
                             .ui.small.header Timestamp Tags
                             each _timestamp_tags
@@ -54,7 +54,7 @@ template(name='model_doc_view')
                         +user_list_toggle key='bookmark_ids' icon='bookmark' label='Bookmark' color='red'
                         div
                         +creation_info
-                .twelve.wide.column.scrolling
+                .ten.wide.column.scrolling
                     .ui.cloud.segment
                         .ui.header
                             each fields
