--- a/client/profile/user_edit.jade
+++ b/client/profile/user_edit.jade
@@ -24,20 +24,21 @@ template(name='user_edit')
                     .ui.form
                         +text_edit key='first_name' label='first name' direct=true
                         +text_edit key='last_name' label='last name' direct=true
-                        +text_edit key='address' label='address' direct=true
-                        +number_edit key='unit_number' label='unit #' direct=true
-                        +number_edit key='building_number' label='building #' direct=true
-                        +text_edit key='building_code' label='building code' direct=true
+                        if user_is_resident
+                            +text_edit key='address' label='address' direct=true
+                            +number_edit key='unit_number' label='unit #' direct=true
+                            +number_edit key='building_number' label='building #' direct=true
+                            +text_edit key='building_code' label='building code' direct=true
+                            +date_edit key='start_date' label='start date' direct=true
+                            +date_edit key='expiration_date' label='expiration date' direct=true
+                            +image_edit key='lease_agreement_image' label='lease agreement image' direct=true
                         //- +text_edit key='email' label='Email' direct=true
                         +phone_edit key='phone' label='phone' direct=true
-                        +date_edit key='start_date' label='start date' direct=true
-                        +date_edit key='expiration_date' label='expiration date' direct=true
-                        +image_edit key='lease_agreement_image' label='lease agreement image' direct=true
                         //- +image_edit key='banner_image_id' label='Banner Image' direct=true
                 .column
                     //- +array_edit key='tags' label='tags' direct=true
                     //- +text_edit key='spirit_animal' label='spirit animal' direct=true
-                    +boolean_edit key='published' label='profile published'
+                    //- +boolean_edit key='published' label='profile published'
                     //- +payment_methods
 
 
