--- a/client/admin.jade
+++ b/client/admin.jade
@@ -41,6 +41,6 @@ template(name='user_table')
 
 template(name='user_role_toggle')
     if is_in_role
-        .remove_role.ui.blue.circular.button #{role}
+        .remove_role.ui.grey.circular.button #{role}
     else
         .add_role.ui.basic.circular.button #{role}
