--- a/client/nav.jade
+++ b/client/nav.jade
@@ -4,20 +4,20 @@ template(name='nav')
         //-     i.large.sidebar.icon
         if is_loading
             .icon.item
-                i.large.grey.loading.refresh.icon
+                i.large.grey.loading.notched.circle.icon
         else
             a.header.icon.item(href='/' class="{{isActivePath '/'}}")
-                i.home.large.icon
+                i.grey.home.large.icon
             a.header.item(href='/staff' class="{{isActivePath '/staff'}}")
-                i.user.shield.large.icon
+                i.grey.user.shield.large.icon
             //- each bookmarked_models
             //-     a.item.set_bookmarked_model(href="/m/#{slug}" class="{{isActivePath '/m/#{slug}'}}" title=title)
             //-         i.large.icon(class=icon)
                     //- |#{title}
             a.icon.item(href='/users' class="{{isActivePath '/users'}}" title='Users')
-                i.large.users.icon
+                i.large.grey.users.icon
             a.icon.item(href='/checkin' class="{{isActivePath '/checkin'}}" title='Health Club')
-                i.large.clinic.medical.icon
+                i.large.grey.clinic.medical.icon
         .right.menu
             if currentUser
                 unless logging_out
@@ -26,16 +26,16 @@ template(name='nav')
                     //-     .menu
                     //-         each notifications
                     //-             .ui.circular.button #{text}
-                    a.icon.item(href="/user/#{currentUser.username}" class="{{isActiveRoute regex='profile'}}")
-                        i.large.mail.icon(class=mail_icon_class title="#{unread_count} Unread")
+                    //- a.icon.item(href="/user/#{currentUser.username}" class="{{isActiveRoute regex='profile'}}")
+                    //-     i.large.grey.mail.icon(class=mail_icon_class title="#{unread_count} Unread")
                     a.icon.item(href="/chat" class="{{isActivePath '/chat'}}")
-                        i.large.chat.icon
+                        i.large.grey.chat.icon
                     if is_admin
                         a.icon.item(href='/admin' class="{{isActivePath '/admin'}}")
-                            i.large.shield.icon
-                    //- if is_dev
-                    a.item.set_model(href='/m/model' class="{{isActivePath '/m/model'}}")
-                        i.large.sitemap.icon
+                            i.large.grey.shield.icon
+                    if is_dev
+                        a.item.set_model(href='/m/model' class="{{isActivePath '/m/model'}}")
+                            i.large.grey.sitemap.icon
                     a.item(href="/user/#{currentUser.username}" class="{{isActiveRoute regex='user_chat'}}")
                         if currentUser.image_id
                             img.ui.avatar.image(src="{{c.url currentUser.image_id width=100 height=100 gravity='face' crop='fill'}}")
@@ -44,13 +44,13 @@ template(name='nav')
                         //- | #{currentUser.username}
                 if logging_out
                     .item
-                        i.large.loading.refresh.icon
+                        i.large.grey.loading.refresh.icon
                 else
-                    a#logout.ui.mobile.hidden.item(href='#' title='Log Out')
-                        i.sign.out.large.icon
+                    a#logout.ui.mobile.hidden.icon.item(href='#' title='Log Out')
+                        i.sign.out.large.grey.icon
             else
-                a.ui.item(href='/login' title='Login') 
-                    i.sign.in.large.icon
+                a.icon.item(href='/login' title='Login') 
+                    i.sign.in.large.grey.icon
 
 
 template(name='sidebar')
