--- a/components/accounts/register.jade
+++ b/components/accounts/register.jade
@@ -4,32 +4,32 @@ template(name='register')
             .ten.wide.column
                 .ui.center.aligned.basic.segment
                     i.massive.icons
-                        i.yin.yang.grey.icon
+                        i.home.grey.icon
                         i.corner.plus.icon
                 if message
                     h4.ui.center.aligned.header #{message}
                 .ui.fluid.labeled.input(class=login_class)
-                    .ui.small.inline.inverted.header 
+                    .ui.small.inline.header 
                         i.user.grey.icon
                         |username
                     input.username(type='text')
                 .ui.fluid.labeled.input(class=login_class)
-                    .ui.small.inline.inverted.header 
+                    .ui.small.inline.header 
                         i.lock.grey.icon
                         | password
                     input.password(type='password')
                 .ui.fluid.labeled.input(class=login_class)
-                    .ui.small.inline.inverted.header 
+                    .ui.small.inline.header 
                         i.lock.grey.icon
                         | password again
                     input.password2(type='password')
                 if username
                     if registering
-                        .ui.fluid.large.circular.inverted.button.enter(class=enter_class)
+                        .ui.fluid.large.circular.button.enter(class=enter_class)
                             i.user.plus.icon
                             |register '#{username}'
                     else
-                        .ui.small.inverted.header username "#{username}" found
+                        .ui.small.header username "#{username}" found
                         a.ui.black.circular.button(href='/login') login
                         
                         
